--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.0-beta4",
+    "mongoose": "^5.1.0",
     "rxjs": "^6.0.0",
+    "save": "^2.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
